sorting back into a good place, but I think it may need to be extracted into its own QueryableData's for linking purposes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
         "ostream": "cpp",
         "iostream": "cpp",
         "xmemory": "cpp",
-        "memory": "cpp"
+        "memory": "cpp",
+        "deque": "cpp",
+        "algorithm": "cpp",
+        "functional": "cpp",
+        "vector": "cpp"
     }
 }
