Sort looks to be working nicely even with where/select involved. a lot of cleanup left to do still

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "algorithm": "cpp",
         "functional": "cpp",
         "vector": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "set": "cpp"
     }
 }
