IQueryable, ISortedQueryable and IBaseQueryable have been divided up and all tests are passing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "functional": "cpp",
         "vector": "cpp",
         "xutility": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "type_traits": "cpp"
     }
 }
