--- a/.github/workflows/functional-tests.yml
+++ b/.github/workflows/functional-tests.yml
@@ -44,4 +44,13 @@ jobs:
       run: cd ./Installs/googletest && ls -l && cmake CMakeLists.txt && cmake && ls -l
     
     - name: Add GTEST Output to PATH
-      run: echo "D:/a/CppQueryable/CppQueryable/Installs/googletest" >> $GITHUB_PATH && echo $GITHUB_PATH
+      run: Add-Content $env:GITHUB_PATH "D:\a\CppQueryable\CppQueryable\Installs\googletest"
+      shell: pwsh
+      # run: echo "D:/a/CppQueryable/CppQueryable/Installs/googletest" >> $GITHUB_PATH && echo $GITHUB_PATH
+    - name: Display the path
+      run: echo ${env:GITHUB_PATH}
+      shell: pwsh
+
+    - uses: actions/checkout@v3
+    - name: Build and Run Functional Tests
+      run: make FuncTests
