--- a/.github/workflows/functional-tests.yml
+++ b/.github/workflows/functional-tests.yml
@@ -2,7 +2,7 @@ name: Functional Tests
 
 on:
   push:
-    branches: [ "ActionTest" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
