setting up timed tests

--- a/DataStructures/CMakeLists.txt
+++ b/DataStructures/CMakeLists.txt
@@ -1,3 +1,10 @@
+set(HEADER_FILES 
+    Animal.hpp
+    AnimalLibrary.hpp
+    Person.hpp
+    PersonAndPetLibrary.hpp
+    PersonLibrary.hpp)
+
 add_library(
     DataStructures
     
@@ -5,4 +12,8 @@ add_library(
     AnimalLibrary.cpp
     Person.cpp
     PersonAndPetLibrary.cpp
-    PersonLibrary.cpp)
+    PersonLibrary.cpp
+    
+    ${HEADER_FILES})
+    
+target_include_directories(DataStructures PRIVATE ${PROJECT_SOURCE_DIR}/DataStructures)
