--- a/CppQueryableTest/Queryable/Performance/Time/CMakeLists.txt
+++ b/CppQueryableTest/Queryable/Performance/Time/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.16.3)
 project(TimePerformanceTests VERSION 1.0)
 
-set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Bin/Test )
 
 include_directories(
     ${PROJECT_SOURCE_DIR}
